internal/lang/test/testdata/errors/undefined_var.scampi
module main

let x = y + 1
